Fix problem in iPad where test overflows and continues outide of the card container.

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -60,21 +60,25 @@
 			border: 1px solid #e8d9f6;
 			box-shadow: 0 3px 3px 0 #ccc;
 			line-height: 1em;
+			word-wrap: break-word;
 
 			.question {
 				height: 30%;
+				width: 100%;
 				font-weight: bold;
 				border-bottom: 1px dashed #888;
 				font-size: 0.8em;
 			}
 			.answer {
 				height: 45%;
+				width: 100%;
 				color: #666;
 				font-size: 0.6em;
 			}
 
 			.question, .answer{
-				padding: 0.5em;
+				padding: 0.5em 0.2em;
+				width: 97%;
 			}
 		}
 		.options {
